corpus/extended.txt
========
macro-statement
========

def PI = 3.14159265
def pulse = if($v1<0.5, 1, 0)

---
(program
  (macro_statement
    (keyword_identifier)
    (name)
    (expression (number)))
  (macro_statement
    (keyword_identifier)
    (name)
    (expression
      (call_function
        (name)
        (arguments (comparison_operator (signal) (number)) (number) (number)))))) 


========
macro-function-statement
========

def osc(freq, time) = freq * time

---
(program
  (macro_function_statement
    (keyword_identifier)
    (name)
    (parameters (name) (name))
    (expression
      (binary_operator (call_macro (name)) (call_macro (name))))))
